chore:  implement connection checking prior to starting intent to launch website and intent resolver to ensure app installed able to handle intent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.youthexploringscience.youthexploringscience">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- needs ACCESS_NETWORK_STATE to see if there is a network connection prior to API query -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
