--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,11 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+    implementation 'android.arch.lifecycle:extensions:1.0.0'
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    testImplementation 'android.arch.core:core-testing:1.0.0'
+    testImplementation 'android.arch.persistence.room:testing:1.0.0'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
 }
